Source/WebCore/html/track/TextTrack.h
@@ -123,6 +123,8 @@ public:
     virtual bool isDefault() const { return false; }
     virtual void setIsDefault(bool) { }
 
+    void removeAllCues();
+
 protected:
     TextTrack(ScriptExecutionContext*, TextTrackClient*, const AtomicString& kind, const AtomicString& label, const AtomicString& language, TextTrackType);
 
